minor border fix to see on mobile

--- a/src/components/NavBar.module.scss
+++ b/src/components/NavBar.module.scss
@@ -1,5 +1,6 @@
 .navBarWrapper {
   width: 100%;
+  border-top: 1px solid black;
   border-bottom: 1px solid black;
   height: 7vh;
   display: grid;
